<resources>
    <string name="app_name">SuperMarket</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="action">Action</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_email_not_valid">Email not valid</string>
    <string name="error_email_required">Email required</string>
    <string name="error_password_not_valid">Password not valid</string>
    <string name="error_password_required">Password required</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="credentials_background_image_view">CardView can\'t have a drawable as it\'s background, so this imageView provide as it\'s background</string>
    <string name="error_credentials_submit_failed">Failed to complete the action, please try again</string>
    <string name="profile_image_of_the_logged_account">Profile image of the logged account</string>
    <string name="image_view_for_a_grid_recycler_view_format">ImageView for a Grid RecyclerView format</string>
    <string name="image_view_for_a_linear_recycler_view_format">ImageView for a Linear RecyclerView format</string>
    <string name="first_slider_title">Get rid of unnecessary things</string>
    <string name="first_slider_description">Post for sale things you never thought people will buy, will be surprised</string>
    <string name="first_timer_image_slider">First Timer image slider</string>
    <string name="second_slider_title">Find people selling exactly what you need</string>
    <string name="second_slider_description">All of our products are sorted based on category so you can find just the right thing for you</string>
    <string name="third_slider_title">Let\'s get started</string>
    <string name="third_slider_description">Simply post things you wan\'t to sell, or search for item you\'r looking for</string>
    <string name="image_view_for_displaying_a_loading_bar_for_the_user">ImageView for displaying a loading bar for the user</string>
    <string name="camera_image_source">Camera image source</string>
    <string name="gallery_image_source">Gallery image source</string>
    <string name="profile_settings">Profile_Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="key_username">USERNAME</string>
    <string name="username">Username</string>
    <string name="edit_username">Pick a new Username</string>
    <string name="key_phone_number">PHONE NUMBER</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_phone_number">Pick a new Phone Number</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="pick_image_source">Pick Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="error_title_empty">Image must have a title</string>
    <string name="error_description_empty">Image must have a description</string>
    <string name="error_posting_image">Image posting process failed, please try again</string>
    <string name="fragment_post_image_view_desc">Image container for the selected image by user to post</string>
    <string name="edit_phone_number_msg">Phone Number is public to other users</string>
    <string name="edit_username_msg">Username is public to other users</string>
    <string name="exit_account">Exit Account</string>
    <string name="key_exit">EXIT</string>
    <string name="exit_account_msg">Click her to exit the account</string>
    <string name="image_display_transition_container">Image Display Transition Container</string>
    <string name="img_large_container_desc">Large imageView that display a selected image</string>
    <string name="img_no_posts_yet_desc">Image indicating to the user that he hasn\'t posted any products yet</string>
</resources>
