<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Home Tab-->
    <item
        android:id="@+id/btnHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <!--Search Tab-->
    <item
        android:id="@+id/btnSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <!--Post Tab-->
    <item
        android:id="@+id/btnPost"
        android:icon="@drawable/ic_add_box"
        android:title="@string/post" />

    <!--Action Tab-->
    <item
        android:id="@+id/btnAction"
        android:icon="@drawable/ic_notifications"
        android:title="@string/action" />

    <!--Profile Tab-->
    <item
        android:id="@+id/btnProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>