<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/cardStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--ImageView - CardView can't have an image as a background so this provide as a background for the CardView-->
        <ImageView
            android:layout_width="@dimen/credentials_background_width"
            android:layout_height="@dimen/credentials_background_height"
            android:background="@drawable/credentials_card_view_background"
            android:contentDescription="@string/credentials_background_image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--GuidLine - End-->
        <android.support.constraint.Guideline
            android:id="@+id/endGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <!--GuidLine - Start-->
        <android.support.constraint.Guideline
            android:id="@+id/startGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <!--TextView - Title of the layout and the name of the app-->
        <TextView
            android:id="@+id/lblMainTitle"
            style="@style/MainLargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/tabCredentialsMode"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <!--TabLayout - In order to switch between the Sign Up and Sign In modes-->
        <android.support.design.widget.TabLayout
            android:id="@+id/tabCredentialsMode"
            android:layout_width="@dimen/credentials_tab_layout_width"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/txtEmailContainer"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@id/lblMainTitle"
            app:tabMode="fixed">

            <!--TabItem - Sign Up Tab-->
            <android.support.design.widget.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />

            <!--TabItem - Sign In Tab-->
            <android.support.design.widget.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

        </android.support.design.widget.TabLayout>

        <!--EditText - Receive the user email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtEmailContainer"
            android:layout_width="@dimen/credentials_text_input_layout"
            android:layout_height="wrap_content"
            android:background="@drawable/credentials_edit_text_background"
            app:layout_constraintBottom_toTopOf="@id/txtPasswordContainer"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tabCredentialsMode">

            <EditText
                android:id="@+id/txtEmail"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <!--EditText - Receive the user password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPasswordContainer"
            android:layout_width="@dimen/credentials_text_input_layout"
            android:layout_height="wrap_content"
            android:background="@drawable/credentials_edit_text_background"
            app:layout_constraintBottom_toTopOf="@id/btnSubmitCredentials"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@id/txtEmailContainer"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/txtPassword"
                style="@style/MainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_outline"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <!--Button - In order to submit the given credentials-->
        <Button
            android:id="@+id/btnSubmitCredentials"
            style="@style/MainLargeText"
            android:layout_width="@dimen/credentials_btn_submit_width"
            android:layout_height="wrap_content"
            android:background="@drawable/credentials_btn_background"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@id/txtPasswordContainer" />

        <!--ImageView - Displaying a loading bar when a credentials submit process in underway-->
        <ImageView
            android:id="@+id/imgAnimation"
            android:layout_width="@dimen/pb_width"
            android:layout_height="@dimen/pb_height"
            android:contentDescription="@string/image_view_for_displaying_a_loading_bar_for_the_user"
            android:src="@drawable/base_loading_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>