<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--TextView - Dialog title indicate to the user the purpose of this dialog-->
    <TextView
        android:id="@+id/lblTitle"
        style="@style/MainLargeText"
        android:layout_width="@dimen/dialog_image_source_title_width"
        android:layout_height="wrap_content"
        android:text="@string/pick_image_source"
        android:textAlignment="center"
        android:textSize="@dimen/dialog_image_source_title_size"
        app:layout_constraintBottom_toTopOf="@id/lblCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Start Divider for the Camera title-->
    <View
        android:id="@+id/cameraDividerStart"
        android:layout_width="@dimen/dialog_image_source_divider_width"
        android:layout_height="@dimen/dialog_image_source_divider_height"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/lblCamera"
        app:layout_constraintEnd_toStartOf="@id/lblCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblCamera" />

    <!--TextView - Camera title to indicate to the user what image source it is-->
    <TextView
        android:id="@+id/lblCamera"
        style="@style/MainMinText"
        android:layout_width="@dimen/dialog_image_source_width"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/imgCameraSource"
        app:layout_constraintEnd_toStartOf="@id/cameraDividerEnd"
        app:layout_constraintStart_toEndOf="@id/cameraDividerStart"
        app:layout_constraintTop_toBottomOf="@id/lblTitle"
        app:layout_constraintWidth_percent="0.25" />

    <!--End Divider for the Camera title-->
    <View
        android:id="@+id/cameraDividerEnd"
        android:layout_width="@dimen/dialog_image_source_divider_width"
        android:layout_height="@dimen/dialog_image_source_divider_height"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/lblCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblCamera"
        app:layout_constraintTop_toBottomOf="@id/lblCamera" />

    <!--ImageView - Image of a camera-->
    <ImageView
        android:id="@+id/imgCameraSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/camera_image_source"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@id/lblGallery"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblCamera" />

    <!--Start Divider for the Gallery title-->
    <View
        android:id="@+id/galleryDividerStart"
        android:layout_width="@dimen/dialog_image_source_divider_width"
        android:layout_height="@dimen/dialog_image_source_divider_height"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/lblGallery"
        app:layout_constraintEnd_toStartOf="@id/lblGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblGallery" />

    <!--TextView - Gallery title to indicate to the user what image source it is-->
    <TextView
        android:id="@+id/lblGallery"
        style="@style/MainMinText"
        android:layout_width="@dimen/dialog_image_source_width"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/imgGallerySource"
        app:layout_constraintEnd_toStartOf="@id/cameraDividerEnd"
        app:layout_constraintStart_toEndOf="@id/cameraDividerStart"
        app:layout_constraintTop_toBottomOf="@id/imgCameraSource"
        app:layout_constraintWidth_percent="0.25" />

    <!--End Divider for the Gallery title-->
    <View
        android:id="@+id/galleryDividerEnd"
        android:layout_width="@dimen/dialog_image_source_divider_width"
        android:layout_height="@dimen/dialog_image_source_divider_height"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/lblGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblGallery"
        app:layout_constraintTop_toBottomOf="@id/lblGallery" />

    <!--ImageView - Image of a gallery-->
    <ImageView
        android:id="@+id/imgGallerySource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gallery_image_source"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_photo_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblGallery" />

</android.support.constraint.ConstraintLayout>
